// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndexPage> (loaded) matches snapshot 1`] = `
<DocumentFragment>
  <main
    class="css-vsj5tt"
  >
    <div
      class="css-12dakew"
    >
      <div
        data-testid="header"
      />
      <ul
        class="css-1yotrj6"
      >
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
        <li
          class="css-1u62lmq"
        >
          <div
            data-testid="card"
          />
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<IndexPage> (loading) matches snapshot 1`] = `
<DocumentFragment>
  <main
    class="css-vsj5tt"
  >
    <div
      class="css-1hfhcgr"
    >
      Loading...
    </div>
  </main>
</DocumentFragment>
`;
